# FX3_STREAM_IN

./: README.md  flash.sh  install.sh  pins.txt
fx3/: CMakeLists.txt  arm926ejs_fx3.cfg  install_sdk.sh  load.gdb
fx3/DMON_FX3/: .gdb_history  build.sh  cyfx_gcc_startup.d  cyfxtx.d  domesdayDuplicator.c  domesdayDuplicator.d  domesdayDuplicator.elf  domesdayDuplicator.h  domesdayDuplicator.img  domesdayDuplicator.map  domesdayDuplicatorGpif.h  load.gdb  usbDescriptor.c
fx3/dmon.cydsn/: dmon.cyfx  dmonGPIF.h
fx3/dmon.cydsn/projectfiles/: gpif2model.xml  gpif2timingsimulation.xml  gpif2view.xml
fx3/include/: dmon.h  dmonGPIF.h
fx3/src/: CMakeLists.txt  cyfxtx.c  dmon.c  usbDescriptor.c
hdl/: gpif.vhd  oddr2.vhd  producer.vhd  switch.vhd
scripts/: convert.py  debug.tcl  sdk.tcl  simu2.tcl  test.tcl  vvsyn.tcl
tb/: tb_fx3.sv  tb_fx3_behav.wcfg
